--- a/utility/monalpha_configuration.yml
+++ b/utility/monalpha_configuration.yml
@@ -6,8 +6,9 @@ environment:
 
 # Sample and detector geometry
 geometry:
-  dist_samp_diode: 12             # mm - distance from sample to diode
-  uncertainty_dist_samp_diode: 2  # mm - uncertainty of distance from sample to diode
+  dist_diode_flange: 103.75   # mm - distance from diode to bottom flange (FIXED)
+  dist_flange_samp: 63.5 #mm THIS IS THE ONE THAT CHANGES EACH TIME
+  uncertainty_dist_samp_diode: 0.3  # mm - uncertainty of distance from sample to diode 
 
 # Implantation se
 implantation:
